# pet_video_editor_android

./: README.md
Cigr/: build.gradle
Cigr/app/: CMakeLists.txt  build.gradle  google-services.json
Cigr/app/jniLibs/include/libavcodec/: avcodec.h
Cigr/app/jniLibs/include/libavutil/: frame.h  opt.h
Cigr/app/jniLibs/include/opencv2/: highgui.hpp
Cigr/app/jniLibs/include/opencv2/videostab/: global_motion.hpp
Cigr/app/src/androidTest/java/com/smadec/maxx/cigr/: ExampleInstrumentedTest.java
Cigr/app/src/main/: AndroidManifest.xml
Cigr/app/src/main/cpp/: CGlobalBuffer.cpp  CGlobalBuffer.h  CMatFrame.cpp  CMatFrame.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  PartialStabilizer.cpp  PartialStabilizer.h  internal_concurent.h  internal_exception.h  native-lib.cpp  vs.cpp
Cigr/app/src/main/java/com/smadec/maxx/cigr/: CameraActivity.java  DisplayOrientationDetector.java  JNIMainLib.java  RecordButton.java  ResultVideoActivity.java  SquareView2.java  StabilizeActivity.java  TinglingSquaresView2.java  TutorialActivity.java  VideoEditActivity.java
Cigr/app/src/main/res/anim/: flipin_ltr.xml  flipin_rtl.xml  flipout_ltr.xml  flipout_rtl.xml  moving_finger_tutorial.xml
Cigr/app/src/main/res/drawable/: ic_brush_black_24dp.xml  ic_facebook.xml  ic_finger.xml  ic_freeze.xml  ic_instagram.xml  ic_storage.xml  ic_unfreeze.xml  round_button.xml  round_corners.xml  tutorial4anim.xml
Cigr/app/src/main/res/layout/: activity_camera.xml  activity_result_video.xml  activity_stabilize.xml  activity_tutorial.xml  activity_video_edit.xml
Cigr/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Cigr/app/src/main/res/values-ru/: strings.xml
Cigr/app/src/test/java/com/smadec/maxx/cigr/: ExampleUnitTest.java
Cigr/gradle/wrapper/: gradle-wrapper.properties
forGooglePlay/: source_gimp.xcf
libs/build-scripts-of-ffmpeg-x264_work_now/: build_android_arm64_v8a.sh  build_android_armeabi.sh  build_android_armeabi_v7a.sh  build_android_mips.sh  build_android_mips64.sh  build_android_x86.sh  build_android_x86_64.sh
libs/build-scripts-of-x264-work_now/: build_android_arm.sh
libs/videostab/: videostab.cpp  videostab_compile.sh  videostab_run.sh
vs/: .cproject  .project
vs/Debug/: makefile  objects.mk
vs/Debug/src/: subdir.mk
vs/Release/: objects.mk
vs/Release/src/: subdir.mk
vs/src/: CGlobalBuffer.cpp  CGlobalBuffer.h  CMatFrame.cpp  CMatFrame.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  PartialStabilizer.cpp  PartialStabilizer.h  internal_concurent.h  internal_exception.h  vs.cpp
